# RenderSoft

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE
.github/workflows/: main.yml
include/: DrawCall.hpp  FrameBuffer.hpp  FrameCounter.hpp  ImageView.hpp  Mesh.hpp  MeshAssets.hpp  Raster.hpp  RenderTarget.hpp  StackVector.hpp  Vertex.hpp  Viewport.hpp
src/: ImageView.cpp  Raster.cpp  RenderSoft.cpp
